# vista25-competitive-insights

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  heroku.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  demo_runner.py  main.py  pyproject.toml  utils.py
backend/agents/: signal_detector.py
backend/api/: auth.py
backend/app/: main.py
backend/app/api/: auth.py
backend/app/core/: supabase.py
backend/app/models/: auth.py
backend/app/services/: auth.py
backend/core/: config.py  supabase.py
backend/models/: model.py
backend/services/: auth.py  news_fetcher.py
backend/tests/integration_tests/: test_signal_extractor.py
frontend/: Dockerfile  config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.js
frontend/app/api/scrape/: route.ts
frontend/app/api/seed/: route.ts
frontend/app/competitors/: page.js
frontend/app/signin/: page.js
frontend/components/: ButtonAccount.js  ButtonSignin.js  DataUpdateIndicator.js  GlobalNotificationProvider.js  Header.js  Hero.js  ImportantToast.js  LayoutClient.js  NewDataBadge.js  NotificationManager.js  NotificationSettings.js  NotificationToast.js  RealtimeDataBadge.js  RecentSignals.js  SignalModal.js
frontend/public/: sitemap-0.xml
supabase/migrations/: 20250722_phase1.sql
