[project]
dependencies = [
  "email-validator>=2.2.0",
  "fastapi>=0.116.1",
  "langchain-openai>=0.3.28",
  "langgraph>=0.5.4",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "supabase>=2.17.0",
  "uvicorn>=0.35.0",
]
description = "Add your description here"
name = "vista25-competitive-insights"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
