[project]
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.6.0",
  "supabase>=2.17.0",
  "langchain-openai>=0.3.28",
  "langgraph>=0.5.4",
  "email-validator>=2.1.0",
  "httpx>=0.27.0",
]
name = "competitive-insights-backend"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "ruff>=0.12.4",
  "httpx>=0.25.0",
]
